--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,8 +37,14 @@ security:
 
     # Note: Only the *first* matching rule is applied
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+    # Autorise la page de login
+    - { path: ^/login$, roles: PUBLIC_ACCESS }
+
+    # Autorise logout si tu l’as
+    - { path: ^/logout$, roles: PUBLIC_ACCESS }
+
+    # Tout le reste nécessite une connexion
+    - { path: ^/, roles: ROLE_USER }
 
 when@test:
     security:
