--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -19,7 +19,7 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          port: 22
+          port: ${{ secrets.SERVER_PORT }}
           script: |
             cd /var/www/html/batipilot || exit
             git pull origin main
