--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -26,5 +26,5 @@ jobs:
             composer install --no-dev --optimize-autoloader
             #php bin/console doctrine:migrations:migrate --no-interaction
             php bin/console cache:clear
-            chown -R www-data:www-data /var/www/html/batipilot/var /var/www/html/batipilot/public
-            chmod -R 775 /var/www/html/batipilot/var /var/www/html/batipilot/public
+            #chown -R www-data:www-data /var/www/html/batipilot/var /var/www/html/batipilot/public
+            #chmod -R 775 /var/www/html/batipilot/var /var/www/html/batipilot/public
