--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -1,33 +1,26 @@
-name: Déploiement Symfony
+#!/bin/bash
 
-on:
-  push:
-    branches:
-      - main
+APP_DIR="/var/www/html/batipilot"
+USER="${APP_USER}"        # récupéré depuis GitHub Secrets
+WEB_USER="${WEB_USER}"    # récupéré depuis GitHub Secrets
+ENV="prod"
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+cd "$APP_DIR" || exit 1
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+# Git
+git fetch origin
+git reset --hard origin/main
+git pull origin main
 
-      - name: Déployer sur le serveur
-        uses: appleboy/ssh-action@v0.1.7
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          port: ${{ secrets.SERVER_PORT }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          script: |
-            cd /var/www/html/batipilot || exit
-            #git fetch origin
-            #git reset --hard origin/main
-            git pull origin main
-            composer install --no-dev --optimize-autoloader
-            #php bin/console doctrine:migrations:migrate --no-interaction
-            php bin/console cache:clear
-            #chown -R batipilot:www-data /var/www/html/batipilot/var
-            #chown -R batipilot:www-data /var/www/html/batipilot/public
-            #chmod -R 775 /var/www/html/batipilot/var /var/www/html/batipilot/public
+# Composer
+composer install --no-dev --optimize-autoloader
+
+# Cache et logs
+rm -rf var/cache/* var/log/*
+
+# Symfony (exécuté avec l'utilisateur web)
+sudo -u $WEB_USER php bin/console cache:clear --env=$ENV
+sudo -u $WEB_USER php bin/console assets:install public
+sudo -u $WEB_USER php bin/console importmap:install
+
+echo "✅ Déploiement terminé !"
