--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -1,14 +1,12 @@
 name: Déploiement Symfony
 
 on:
-  pull_request:
-    types: [closed]  # déclenchement à la fermeture d'une PR
+  push:
     branches:
       - main
 
 jobs:
   deploy:
-    if: github.event.pull_request.merged == true  # ne se lance que si la PR est mergée
     runs-on: ubuntu-latest
 
     steps:
@@ -24,8 +22,12 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             cd /var/www/html/batipilot || exit
+            #git fetch origin
+            #git reset --hard origin/main
             git pull origin main
             composer install --no-dev --optimize-autoloader
-            # php bin/console doctrine:migrations:migrate --no-interaction
+            #php bin/console doctrine:migrations:migrate --no-interaction
             php bin/console cache:clear
-            # chown et chmod si nécessaire
+            #chown -R batipilot:www-data /var/www/html/batipilot/var
+            #chown -R batipilot:www-data /var/www/html/batipilot/public
+            #chmod -R 775 /var/www/html/batipilot/var /var/www/html/batipilot/public
