modif deploiement pour push sur main

--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -1,20 +1,19 @@
-name: Deploy Symfony Production
+name: Déploiement Symfony
 
 on:
-  pull_request:
-    types: [closed]
+  push:
     branches:
       - main
 
 jobs:
   deploy:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Deploy via SSH
+      - name: Déployer sur le serveur
         uses: appleboy/ssh-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -22,38 +21,13 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            set -e
-
-            APP_DIR=/var/www/html/batipilot
-            RELEASE=$(date +"%Y%m%d%H%M%S")
-            RELEASE_DIR=$APP_DIR/releases/$RELEASE
-
-            echo "Create release directory"
-            mkdir -p $RELEASE_DIR
-
-            echo "Clone repository"
-            git clone --depth 1 -b main git@github.com:ZakinaA/batipilot.git $RELEASE_DIR
-
-            cd $RELEASE_DIR
-
-            echo "Shared files"
-            ln -s $APP_DIR/shared/.env.local .env.local
-            rm -rf var
-            ln -s $APP_DIR/shared/var var
-
-            echo "Install dependencies"
+            cd /var/www/html/batipilot || exit
+            #git fetch origin
+            #git reset --hard origin/main
+            git pull origin main
             composer install --no-dev --optimize-autoloader
-
-            echo "Symfony cache"
-            php bin/console cache:clear --env=prod
-
-            echo "Switch symlink"
-            ln -sfn $RELEASE_DIR $APP_DIR/current
-
-            echo "Fix permissions"
-            chown -R www-data:www-data $APP_DIR
-
-            echo "Cleanup old releases"
-            ls -dt $APP_DIR/releases/* | tail -n +6 | xargs rm -rf || true
-
-            echo "Deploy finished"
+            #php bin/console doctrine:migrations:migrate --no-interaction
+            php bin/console cache:clear
+            chown -R batipilot:www-data /var/www/html/batipilot/var
+            chown -R batipilot:www-data /var/www/html/batipilot/public
+            chmod -R 775 /var/www/html/batipilot/var /var/www/html/batipilot/public
