--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -28,6 +28,6 @@ jobs:
             composer install --no-dev --optimize-autoloader
             #php bin/console doctrine:migrations:migrate --no-interaction
             php bin/console cache:clear
-            chown -R batipilot:www-data /var/www/html/batipilot/var
-            chown -R batipilot:www-data /var/www/html/batipilot/public
-            chmod -R 775 /var/www/html/batipilot/var /var/www/html/batipilot/public
+            #chown -R batipilot:www-data /var/www/html/batipilot/var
+            #chown -R batipilot:www-data /var/www/html/batipilot/public
+            #chmod -R 775 /var/www/html/batipilot/var /var/www/html/batipilot/public
